--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,10 @@ repositories {
 dependencies {
 
     testImplementation 'org.testng:testng:6.9.10'
-
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
     implementation 'org.seleniumhq.selenium:selenium-java:4.21.0'
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.0'
 
 }
 
